--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
     name: github
     repo: joshdrink/clone-jekyll-netlify # Path to your GitHub repository
+    site_domain: joshbeveridge.ca
 publish_mode: editorial_workflow
 media_folder: "img/uploads"
 collections:
