--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,3 +1,4 @@
+site_id: modest-roentgen-ad536a.netlify.com
 backend:
     name: github
     repo: joshdrink/clone-jekyll-netlify # Path to your GitHub repository
