--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,9 +1,11 @@
-site_id: modest-roentgen-ad536a.netlify.com
 backend:
-    name: github
-    repo: joshdrink/clone-jekyll-netlify # Path to your GitHub repository
+  name: github
+  repo: joshdrink/clone-jekyll-netlify   # Path to your GitHub repository
+  branch: master    # Branch for Netlify CMS to create Pull Requests against
+  base_url: https://us-central1-netlify-cms-oauth-269122.cloudfunctions.net   # URL to the Google Cloud Function OAuth Client
+  auth: /cloud_run/auth
 publish_mode: editorial_workflow
-media_folder: "img/uploads"
+media_folder: "assets/img/uploads"
 collections:
     - name: "blog" # Used in routes, e.g., /admin/collections/blog
       label: "Blog" # Used in the UI
