--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,7 +3,8 @@ backend:
   repo: joshdrink/clone-jekyll-netlify   # Path to your GitHub repository
   branch: master    # Branch for Netlify CMS to create Pull Requests against
   base_url: https://us-central1-netlify-cms-oauth-269122.cloudfunctions.net   # URL to the Google Cloud Function OAuth Client
-  auth: /cloud_run/auth
+  auth_endpoint: /cloud_run/auth
+  open_authoring: true
 publish_mode: editorial_workflow
 media_folder: "assets/img/uploads"
 collections:
