--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,8 +2,8 @@ backend:
   name: github
   repo: joshdrink/clone-jekyll-netlify   # Path to your GitHub repository
   branch: master    # Branch for Netlify CMS to create Pull Requests against
-  base_url: https://us-central1-netlify-cms-oauth-269122.cloudfunctions.net/cloud_run   # URL to the Google Cloud Function OAuth Client
-  auth_endpoint: /auth
+  base_url: https://us-central1-netlify-cms-oauth-269122.cloudfunctions.net   # URL to the Google Cloud Function OAuth Client
+  auth_endpoint: /cloud_run/auth
   open_authoring: true
 publish_mode: editorial_workflow
 media_folder: "assets/img/uploads"
